# elemento-rdp-rs

./: .gitignore  Cargo.toml  build.sh  clean.sh  mstsc-rs  mstsc-rs.working  setup.sh
TO DELETE/: rdp-client.js
client/: index.html  rdp-client.js
electron-rdp-client/: index.html  main.js  mstsc-rs  package.json  rdp-client.js
src GUI/: lib.rs
src GUI/codec/: rle.rs
src GUI/core/: capability.rs  client.rs  event.rs  gcc.rs  global.rs  license.rs  mcs.rs  per.rs  tpkt.rs
src GUI/model/: data.rs  link.rs  unicode.rs
src GUI/nla/: asn1.rs
src/core/: event.rs  mod.rs  sec.rs  tpkt.rs  x224.rs
src/model/: error.rs  mod.rs  rnd.rs
src/nla/: cssp.rs  mod.rs  ntlm.rs  sspi.rs
