[package]
name = "rdp-rs"
version = "0.2.0"
edition = "2015"
authors = ["Sylvain Peyrefitte <citronneur@gmail.com>", "Gabriele Gaetano Fronze <gabriele.fronze@elemento.cloud>"]
description = "A Pure RUST implementation of Remote Desktop Protocol"
repository = "https://github.com/Elemento-Modular-Cloud/elemento-rdp-rs"
readme = "README.md"
keywords = ["rdp", "security", "network", "windows"]
categories = ["network"]
license = "MIT"
documentation = "https://docs.rs/rdp-rs"

[lib]
name = "rdp"
path = "src/lib.rs"

[[bin]]
name = "mstsc-rs"
path = "src/bin/mstsc-rs.rs"
required-features = ["mstsc-rs"]

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
integration = []
mstsc-rs = ["hex", "winapi", "minifb", "clap", "libc"]

[dependencies]
native-tls = "^0.2"
byteorder = "^1.3"
bufstream = "0.1"
rust-crypto = "0.2.36"
indexmap = "^2.7.1"
yasna = { version = "^0.5.2" }
md4 = "^0.10.2"
hmac = "^0.12.1"
md-5 = "^0.10.6"
rand = "^0.9.0"
num-bigint = "^0.4.6"
x509-parser = "0.17.0"
num_enum = "0.7.3"

# for mtsc-rs
hex = { version = "^0.4", optional = true }
winapi = { version = "^0.3", features = ["winsock2"], optional = true }
minifb = { version = "^0.28.0", optional = true }
clap = { version = "3.0", optional = true }
libc = { version = "^0.2", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket = "0.27.1"